package com.codecool.battleship;

public enum GameMode {
    PvP, PvAI
}
