package com.codecool.battleship;

public enum ShipPlacement {
    MANUAL, RANDOMIZED
}
