package com.codecool.battleship.utils;

public class Constans {
    public static final String DATA_FILE = "src/main/resources/highScore.csv";
    public static final String ICONS_DIRECTORY = "/src/main/resources/icons/";
    public static final String GAME_TITLE = "Battleship";
    public static final String HIGH_SCORE = "High score";
    public static final String COLUMN_SEPARATOR = ";";
    public static final String START_Y = "startY";
    public static final String START_X = "startX";
    public static final String END_Y = "endY";
    public static final String END_X = "endX";

    public static final int REWARD_FOR_HITTING_SHIP = 50;
    public static final int REWARD_FOR_SINKING_SHIP = 100;
    public static final int REWARD_FOR_WINNING = 1000;
    public static final int PENALTY_FOR_MISSING = -20;
    public static final int NAME_TABLE_INDEX = 0;
    public static final int SCORE_TABLE_INDEX = 1;
    public static final int TITLE_INDENT_SIZE = 18;
    public static final int MENU_ITEM_INDENT_SIZE = TITLE_INDENT_SIZE + 2;
    public static final int INDENT_SIZE = 9;
    public static final int TABLE_INDENT_SIZE = INDENT_SIZE + 4;
    public static final int HIGH_SCORE_LENGTH = 10;
    public static final int BOARD_SIZE = 10;
    public static final int INDEX_CORRECTION = 1;
    public static final char ASCII_DEC_CODE_UPPERCASE_LETTER_A = 'A';
    public static final int FIELD_SIZE_IN_PIXEL = 60;
    public static final int GUI_PLAYER_INPUT_SWITCH = 400;
    public static final int CHARACTER_TO_BOARD_CORRECTION = 64;
}
